# cred-codex

./: .gitignore  CREDCODEX_IMPLEMENTATION_PROMPT.md  README.md  build_app.sh  install.sh  pyproject.toml  uninstall.sh
credcodex/: __init__.py  __main__.py  app.py  auth_launcher.py  config.py  icon_assets.py  keepalive.py  keepalive_state.py  limit_providers.py  models.py  notifications.py  settings.py
credcodex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
notes/: 00_overview.md  01_features.md  02_design_system.md  03_architecture.md  04_auth_and_roles.md  06_api_contracts.md  07_user_flows.md  08_pages_and_routes.md  09_dev_setup.md  10_deployment.md  11_known_issues.md  12_roadmap.md  13_prompt_context.md
scripts/: generate_menubar_icons.sh
tests/: __init__.py  conftest.py  test_app.py  test_auth_launcher.py  test_config.py  test_icon_assets.py  test_keepalive.py  test_limit_providers.py
